# aka_nlp_dj

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  main.py
src/conf/: settings.py
src/core/: domains.py  llm_factory.py  lyrics.py  suno_client.py  suno_prepare.py  suno_render.py  suno_view.py  utils.py
src/logger/: logger.py
src/utils/: llm_retry.py
src/workflow/: app_graph.py  graph.py  lyrics_graph.py  lyrics_nodes.py  music_graph.py  music_nodes.py  nodes.py  prepare_suno.py  prompts.py  state.py  tools.py
